# TestX5

./: .env  Dockerfile  README.md  REVIEW.md  docker-compose.yml  entrypoint.sh  pyproject.toml
src/: manage.py
src/api/: pagination.py  serializers.py  urls.py  views.py
src/api/tests/: conftest.py
src/api/tests/api_tests/: test_campaigns.py
src/core/: admin.py
src/core/migrations/: 0001_initial.py  0002_advertisement_banner_campaign_advertisement_campaign_and_more.py  0003_alter_advertisement_campaign_and_more.py
src/core/models/: ads.py  users.py
src/test_x5/: asgi.py  settings.py  settings_test.py  urls.py  wsgi.py
src/web/: forms.py  urls.py  views.py
src/web/templates/: base.html
src/web/templates/advertisement/: advertisement_delete.html  advertisement_detail.html  advertisement_form.html
src/web/templates/banner/: banner_form.html
src/web/templates/campaigns/: campaign_delete.html  campaign_detail.html  campaign_form.html  campaign_list.html
src/web/templates/registration/: login.html
